--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  margin-top: 2%;
   padding: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Box shadow effect */
 }
@@ -65,6 +66,7 @@
   flex-direction: column;
   border-radius: 10px;
   padding: 10px;
+  margin-top: 2%;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); /* Box shadow effect */
 }
 
@@ -104,4 +106,187 @@ input:focus {
   border: none;
   background-color: transparent;
   cursor: pointer;
+}
+/* Notes Container =============================================================== */
+
+.notes-container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-auto-rows: auto;
+  gap: 10px 20px;
+  padding: 2% 5%;
+}
+
+.note-container {
+  padding: 5px 10px 10px 15px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  background-color: rgb(244, 175, 135);
+}
+
+.note-title,
+.note-content {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 16px;
+}
+.note-creation-date {
+  background-color: var(--gray);
+  border-radius: 35px;
+  padding: 5px;
+  font-size: 10px;
+  width: 30%;
+  height: 10px;
+}
+
+.delete-note {
+  height: 20px;
+  display: flex;
+  justify-content: flex-end;
+  display: none;
+  background-image: url(./images/trash.png);
+}
+
+.delete-note img {
+  height: 100%;
+  width: auto;
+}
+
+.note-container:hover .delete-note {
+  display: flex;
+}
+
+/* Note on click ==================================== */
+
+.note-on-click-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.note-on-click {
+  background-color: white;
+  width: 35%;
+  padding: 5px 10px 10px 15px;
+  border-radius: 10px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+}
+
+.note-on-click input {
+  width: 100%;
+  margin-top: 3%;
+  color: black;
+  border: none;
+}
+
+.note-on-click-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+.note-on-click-buttons > button {
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+button {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.note-on-click-title > input {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 20px;
+}
+
+.note-on-click-content > input {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 16px;
+}
+
+.note-on-click-creation-date {
+  background-color: var(--gray);
+  border-radius: 35px;
+  padding: 5px;
+  margin-top: 20px;
+  font-size: 12px;
+  width: 10%;
+  height: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.note-on-click-cancel {
+  color: red;
+}
+/* Note on delete ==================================== */
+.note-on-delete-container {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.note-on-delete {
+  background-color: white;
+  width: 35%;
+  padding: 5px 10px 10px 15px;
+  border-radius: 10px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  z-index: 3;
+}
+
+.note-on-delete-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+.note-on-delete-buttons > button {
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.note-on-delete-title > p {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 20px;
+}
+
+.note-on-delete-content > p {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.note-on-delete-close {
+  color: red;
 }
